Fix course hours text alignment

--- a/styles.css
+++ b/styles.css
@@ -254,16 +254,21 @@ td {
 	padding: 0.5em 2.5em;
 }
 
+.hours {
+	text-align: right;
+	padding: 0.5em 1em;
+}
+
 .course-number {
 	width: 10em;
 }
 
-.total-hours {
+.total-row {
 	background-color: #0067a5;
 	color: #ffffff;
 }
 
-.total-hours th {
+.total-row th {
 	background-color: #0067a5;
 	border-radius: 0;
 }
